# drag-drop

./: README.md  assignment.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: 1_categories.sql
backend/src/: error.rs  lib.rs  main.rs  routes.rs
backend/src/auth/: auth_extractor.rs  login.rs  mod.rs  signup.rs
backend/src/categories/: create_category.rs  delete_category.rs  get_all_categories.rs  get_single_category.rs  mod.rs
backend/src/extractors/: auth_extractor.rs  mod.rs
backend/src/routes/: auth.rs  categories.rs  mod.rs
backend/src/routes/auth/: mod.rs  signup.rs
backend/src/routes/categories/: create_category.rs  get_all_categories.rs  get_single_category.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Layout.tsx  config.tsx  index.css
frontend/src/components/: CategoryList.tsx  CategoryListItem.tsx  CategoryModal.tsx  CategoryUploader.tsx  FileDropzone.tsx  Footer.tsx  Layout.tsx  LoginModal.tsx  LogoutButton.tsx  Navbar.tsx  SignupModal.tsx  TreeNode.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Home.tsx  Layout.tsx
tests/data/: error01.json  error02.json  test01.json  test02.json
