[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
chrono = "0.4.37"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.3.0"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors"] }
validator = { version = "0.17.0", features = ["derive"] }
